objects/SESOC__Package__c.object
<CustomObject>
    <description>E-Signature Document Packages</description>
    <fields>
        <fullName>SESOC__Context_Object_ID__c</fullName>
        <description>The system automatically populates this required text field with the ID of the object from which it sends the document package for e-signature. For example, if the system sends loan documents for e-signature, it populates this field with the loan ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__Datetime_Package_Complete__c</fullName>
        <description>The system automatically populates this datetime field to track the time the package completed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Package Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SESOC__Document_Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to track the association to a document collection.</description>
        <label>Document Collection</label>
        <referenceTo>LLC_BI__Document_Collection__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SESOC__Package_Name__c</fullName>
        <description>The system automatically populates this required text field to store the vendor name of the package. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__Status__c</fullName>
        <description>The system automatically populates this required picklist to track the status of the package. By default, it is Created.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Timed Out</fullName>
                </value>
                <value>
                    <fullName>Pending Document Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SESOC__VendorId__c</fullName>
        <description>The system automatically populates this text field to track the vendor ID of the package.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__VendorPlugin__c</fullName>
        <description>The system automatically populates this text field to track the vendor plug-in used to created this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Plug-in</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SESOC__Document_Collection__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>